# IBMQradarMCP2.0

./: .env.example  .gitignore  ADVANCED_FEATURES.md  AUTHORS.md  CREDITS.md  DEPLOYMENT_CHECKLIST.md  FEATURES_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOCAL_LLM_GUIDE.md  PROJECT_SUMMARY.md  QUICK_DEPLOY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RELEASE_NOTES_v0.2.0.md  SETUP.md  START_HERE.md  TROUBLESHOOTING.md  WEB_UI_GUIDE.md  WEB_UI_SUMMARY.md  WHATS_NEW.md  claude_desktop_config.example.json  local_llm_client.py  pyproject.toml  requirements.txt  setup_local_llm.sh  start_webui.sh  test_connection.py  web_ui.py
examples/: example_queries.md
src/: __init__.py  __main__.py  qradar_client.py  server.py
templates/: index.html
